--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ru">
 <head>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <title></title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>HTML, CSS & Git Basics.</p>
+  <h1>This is a heading</h1>
+  <p>HTML, CSS & Git Basics.</p>
 
 </body>
 </html>
