--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <mate><meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>HTML, CSS & Git Basics.</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <h1>This is a heading</h1>
   <p>HTML, CSS & Git Basics.</p>
-
-  Failed HTML requirements. Result:
-   DOCTYPE should be uppercase Expected omitted end tag 
-   <meta> instead of self-closing element <meta/> 
-   <title> cannot be empty, must have text content Expected omitted end tag 
-     <link> instead of self-closing element <link/> 
-     Raw "&" must be encoded as "&amp;"
 
 </body>
 </html>
