--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>HTML, CSS &amp Git Basics.</title>
+  <title>HTML, CSS &amp; Git Basics.</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <h1>This is a heading</h1>
-  <p>HTML, CSS &amp Git Basics.</p>
+  <p>HTML, CSS &amp; Git Basics.</p>
 
 </body>
 </html>
