fix: Edit Index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>HTML, CSS &amp; Git Basics.</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+  <h1>This is a heading</h1>
+  <p>HTML, CSS &amp; Git Basics.</p>
 
 </body>
 </html>
