--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container navigMenu">
       <nav class="nav">
         <ul class="menuList">
-          <li class="itemMenu"><a href="#Contacts" class="itemLink">Contacts</a> </li>
-          <li class="itemMenu"><a href="#Summary" class="itemLink">Summary</a></li>
-          <li class="itemMenu"><a href="#Skills" class="itemLink">Skills</a></li>
-          <li class="itemMenu"><a href="#Code" class="itemLink">Code</a></li>
-          <li class="itemMenu"><a href="#Projects" class="itemLink">Projects</a></li>
-          <li class="itemMenu"><a href="#Education" class="itemLink">Education</a></li>
-          <li class="itemMenu"><a href="#Languages" class="itemLink">Languages</a></li>
+          <li class="itemMenu"><a href="#contacts" class="itemLink">Contacts</a> </li>
+          <li class="itemMenu"><a href="#summary" class="itemLink">Summary</a></li>
+          <li class="itemMenu"><a href="#skills" class="itemLink">Skills</a></li>
+          <li class="itemMenu"><a href="#code" class="itemLink">Code</a></li>
+          <li class="itemMenu"><a href="#projects" class="itemLink">Projects</a></li>
+          <li class="itemMenu"><a href="#education" class="itemLink">Education</a></li>
+          <li class="itemMenu"><a href="#languages" class="itemLink">Languages</a></li>
         </ul>
       </nav>
     </div>
@@ -32,7 +32,7 @@
         <img src="assets/img/avatar.jpg" alt="Avatar">
         <h3 class="section-subtitle">Junior Front-End Developer</h3>
       </section>
-      <section class="section" id="Contacts">
+      <section class="section" id="contacts">
         <h2 class="section-title">Contacts</h2>
         <ul class="section-list">
           <li class="section-item contacts-item">
@@ -52,13 +52,13 @@
           </li>
         </ul>
       </section>
-      <section class="section" id="Summary">
+      <section class="section" id="summary">
         <h2 class="section-title">Summary</h2>
         <p>My main job is related to programming.
           I want to develop in Web development.
           My main goal - clean code. Good understanding of the layout of sites.</p>
       </section>
-      <section class="section" id="Skills">
+      <section class="section" id="skills">
         <h2 class="section-title">Skills</h2>
         <ul class="section-list">
           <li class="section-item">
@@ -75,7 +75,7 @@
           </li>
         </ul>
       </section>
-      <section class="section" id="Code">
+      <section class="section" id="code">
         <h2 class="section-title">Code</h2>
         <pre class="pre">
         <code>
@@ -90,7 +90,7 @@
         </code>
       </pre>
       </section>
-      <section class="section" id="Courses">
+      <section class="section" id="courses">
         <h2 class="section-title">Courses</h2>
         <ul class="section-list">
           <li class="section-item">
@@ -101,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <section class="section" id="Projects">
+      <section class="section" id="projects">
         <h2 class="section-title">Projects</h2>
         <ul class="section-list">
           <li class="section-item github-project">
@@ -114,13 +114,13 @@
           </li>
         </ul>
       </section>
-      <section class="section" id="Education">
+      <section class="section" id="education">
         <h2 class="section-title">Education</h2>
         <p>
           University: Belarusian National Technical University
         </p>
       </section>
-      <section class="section section-languages" id="Languages">
+      <section class="section section-languages" id="languages">
         <h2 class="section-title">Languages</h2>
         <p>
           English - Just starting to learn the language (A1).
