fix: Anchor link

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container navigMenu">
       <nav class="nav">
         <ul class="menuList">
-          <li class="itemMenu"><a href="#contacts" class="itemLink">Contacts</a> </li>
-          <li class="itemMenu"><a href="#summary" class="itemLink">Summary</a></li>
-          <li class="itemMenu"><a href="#skills" class="itemLink">Skills</a></li>
-          <li class="itemMenu"><a href="#code" class="itemLink">Code</a></li>
-          <li class="itemMenu"><a href="#projects" class="itemLink">Projects</a></li>
-          <li class="itemMenu"><a href="#education" class="itemLink">Education</a></li>
-          <li class="itemMenu"><a href="#languages" class="itemLink">Languages</a></li>
+          <li class="itemMenu"><a href="#contacts" class="itemLink" aria-label="contacts">Contacts</a> </li>
+          <li class="itemMenu"><a href="#summary" class="itemLink" aria-label="summary">Summary</a></li>
+          <li class="itemMenu"><a href="#skills" class="itemLink" aria-label="skills">Skills</a></li>
+          <li class="itemMenu"><a href="#code" class="itemLink" aria-label="code">Code</a></li>
+          <li class="itemMenu"><a href="#projects" class="itemLink" aria-label="projects">Projects</a></li>
+          <li class="itemMenu"><a href="#education" class="itemLink" aria-label="education">Education</a></li>
+          <li class="itemMenu"><a href="#languages" class="itemLink" aria-label="languages">Languages</a></li>
         </ul>
       </nav>
     </div>
@@ -36,19 +36,19 @@
         <h2 class="section-title">Contacts</h2>
         <ul class="section-list">
           <li class="section-item contacts-item">
-            <a href="https://yandex.by/maps/157/minsk/?ll=27.561481%2C53.902496&z=12" target="_blank">Minsk</a>
+            <a href="https://yandex.by/maps/157/minsk/?ll=27.561481%2C53.902496&z=12" target="_blank" aria-label="map">Minsk</a>
           </li>
           <li class="section-item contacts-item">
-            Email: <a href="mailto:1077Control@gmail.com" title="email" target="_blank">1077Control@gmail.com</a>
+            Email: <a href="mailto:1077Control@gmail.com" title="email" target="_blank" aria-label="email">1077Control@gmail.com</a>
           </li>
           <li class="section-item contacts-item">
-            Github: <a href="https://github.com/VladimirLGit" title="github" target="_blank">VladimirLGit</a>
+            Github: <a href="https://github.com/VladimirLGit" title="github" target="_blank" aria-label="github">VladimirLGit</a>
           </li>
           <li class="section-item contacts-item">
-            Telegram: <a href="https://t.me/Vladimir_Lobanok" title="github" target="_blank">@VladimirL</a>
+            Telegram: <a href="https://t.me/Vladimir_Lobanok" title="telegram" target="_blank" aria-label="telegram">@VladimirL</a>
           </li>
           <li class="section-item contacts-item">
-            Discord: <a href="https://discord.gg/zUr7wWYPXE" title="github" target="_blank">Vladimir L#9027</a>
+            Discord: <a href="https://discord.gg/zUr7wWYPXE" title="discord" target="_blank" aria-label="discord">Vladimir L#9027</a>
           </li>
         </ul>
       </section>
@@ -97,7 +97,7 @@
             Java:<span> SE and EE</span>
           </li>
           <li class="section-item">
-            RS School:<span> <a href="https://app.rs.school">«JavaScript/Front-end. Stage 0» (in progress)</a></span>
+            RS School:<span> <a href="https://app.rs.school" aria-label="rs school">«JavaScript/Front-end. Stage 0» (in progress)</a></span>
           </li>
         </ul>
       </section>
@@ -105,12 +105,12 @@
         <h2 class="section-title">Projects</h2>
         <ul class="section-list">
           <li class="section-item github-project">
-            Java:<span> <a href="https://github.com/VladimirLGit" title="github"
-                target="_blank">Project_Hotel</a></span>
+            Java:<span> <a href="https://github.com/VladimirLGit" title="java"
+                target="_blank" aria-label="java">Project_Hotel</a></span>
           </li>
           <li class="section-item github-project">
             RS School:<span> <a href="https://github.com/VladimirLGit" title="github"
-                target="_blank">GitHub_repository</a></span>
+                target="_blank" aria-label="rs school">GitHub_repository</a></span>
           </li>
         </ul>
       </section>
@@ -130,7 +130,7 @@
   </main>
   <footer class="footer">
     <div class="container footer-container">
-      <div>© 2022 <a href="https://github.com/VladimirLGit" class="github nav-link" target="_blank">GitHub
+      <div>© 2022 <a href="https://github.com/VladimirLGit" class="github nav-link" target="_blank" aria-label="github">GitHub
           VladimirLGit</a></div>
       <a href="https://rs.school/js/" class="rss"></a>
     </div>
