feat: fix Anchor

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
     <div class="container footer-container">
       <div>© 2022 <a href="https://github.com/VladimirLGit" class="github nav-link" target="_blank" aria-label="github">GitHub
           VladimirLGit</a></div>
-      <a href="https://rs.school/js/" class="rss" aria-label="rs.school"></a>
+      <a href="https://rs.school/js/" class="rss" aria-label="rs.school"> 
+        <img src="./assets/svg/rss.svg" alt="rs.school"> 
+      </a>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
